<resources>
    <string name="app_name">Bill Store</string>
    <string name="action_settings">Settings</string>
    <string name="bill_store"><b>Bill Store</b></string>
    <string name="resend_otp_text"><u>Didn\'t got OTP? Resend OTP</u></string>
    <string name="hint_phone_number">Enter your Mobile Number</string>
    <string name="sms_text">You will get an SMS with a verification number to this number +91 8223906997</string>
    <string name="text_select_from_existing_vendors">Select Vendor</string>
    <string name="text_or">OR</string>
    <string name="text_add_new_vendor">Add new Vendor</string>
    <string name="text_enter_new_vendor_name">Vendor name</string>
    <string name="text_enter_new_vendor_address">Vendor Address</string>
    <string name="text_enter_new_vendor_gst_number">Vendor GST Number</string>
    <string name="text_select_bill_date">Select Bill Date</string>
    <string name="text_enter_bill_amount">Enter Bill Amount</string>
    <string name="text_enter_bill_description">Enter bill description</string>
    <string name="dialog_list_btn_close">Close</string>
    <string name="xml_select_vendor">Select Vendor</string>
    <string name="text_billStatus">Bill Status</string>
    <string name="text_due">Due</string>
    <string name="text_paid">Paid</string>
    <string name="toast_please_select_date">Please Select Date</string>
    <string name="text_home">Home</string>
    <string name="text_add_bill">Add Bill</string>
    <string name="text_make_bill">Make Bill</string>
    <string name="text_profile">Profile</string>
    <string name="rupee_sign">&#8377;</string>
    <string name="txt_skip"><u>SKIP</u></string>
    <string name="alert_btn_continue">Continue</string>
    <string name="alert_btn_yes">Yes</string>
    <string name="alert_btn_no">No</string>
    <string name="skip_profile_setup">Skip Profile Setup</string>
    <string name="malfunction">Skipping can lead to malfunctioning of app</string>
    <string name="customers">Customers</string>
    <string name="vendors">Vendors</string>
    <string name="verification_message">You will get an SMS with a verification number to this number +91</string>
    <string name="exit">Exit</string>
    <string name="alert_sure_exit_app">Are you sure you want to exit?</string>
    <string name="text_bill_date">Bill Date</string>
    <string name="text_bill_amount">Bill Amount</string>
    <string name="text_bill_description">Bill Description</string>
    <string name="text_save">Save</string>
    <string name="text_add_document">Add Document(s)</string>
    <string name="text_setup_profile">Setup Profile</string>
    <string name="text_full_name">Full name</string>
    <string name="text_shop_company_name">Shop/Company Name</string>
    <string name="text_shop_company_address">Shop/Company Address</string>
    <string name="text_gst_number">GST Number</string>
    <string name="text_cin_pan_number">CIN/PAN Number</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="slide_1_title">Digitize Bills</string>
    <string name="slide_1_desc">Digitize all your paper bills and save another tree from cutting down</string>
    <string name="slide_2_title">Generate Invoice</string>
    <string name="slide_2_desc">Generate invoice for your customers instantly</string>
    <string name="slide_3_title">Search Easily</string>
    <string name="slide_3_desc">Search among your customers and vendors with just one click</string>
    <string name="info_internet_available">Available</string>
    <string name="info_internet_not_available">Internet Not Available!</string>
    <string name="txt_enter_item_details">Enter Item Details</string>
    <string name="btn_back_button">Back Button</string>
    <string name="text_add">Add</string>
    <string name="txt_item_name">Item Name</string>
    <string name="txt_unit_of_sale">Unit of Sale</string>
    <string name="txt_cost_per_item">Cost per Item</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_include_gst">Include GST</string>
    <string name="txt_select_gst_rate">Select GST Rate</string>
    <string name="txt_gst_amount">GST Amount</string>
    <string name="txt_cost_per_item_with_gst">Cost per Item with GST</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_menu">menu</string>
    <string name="txt_bill_amount">Bill Amount :</string>
    <string name="txt_bill_status">Bill Status :</string>
    <string name="text_bill_documents">Bill Document(s) :</string>
    <string name="txt_print">Print</string>
    <string name="place_holder_shop_name">Your Shop Name</string>
    <string name="place_holder_shop_address">Your Shop Address</string>
    <string name="txt_date">Invoice Date:</string>
    <string name="txt_gst_no">GST Number:</string>
    <string name="txt_for">For :</string>
    <string name="table_item">Item</string>
    <string name="table_cost">Cost</string>
    <string name="table_qty">Qty</string>
    <string name="table_total">Total</string>
    <string name="txt_subtotal">Subtotal : </string>
    <string name="txt_note">Note -</string>
    <string name="txt_done">Done</string>
    <string name="txt_app_icon">app icon</string>
    <string name="txt_enter_phone_number">Enter Phone Number</string>
    <string name="txt_sign_in">sign in</string>
    <string name="txt_background_image">background image</string>
    <string name="txt_bill_card">bill card</string>
    <string name="txt_verification">Verification</string>
    <string name="txt_edit_number">edit number</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_add_bill_image">add bill image</string>
    <string name="txt_you_haven_t_added_any_customer_yet">You haven\'t added any customer yet</string>
    <string name="txt_content_not_found">Content not found</string>
    <string name="txt_select_customer">Select Customer</string>
    <string name="txt_add_new_customer">Add new Customer</string>
    <string name="txt_customer_name">Customer Name</string>
    <string name="txt_customer_address">Customer Address</string>
    <string name="txt_customer_gst_number_if_any">Customer GST Number(if any)</string>
    <string name="txt_invoice_date">Invoice Date</string>
    <string name="txt_invoiced_items_tap_to_add">Invoiced Items (Tap to add)</string>
    <string name="txt_update">Update</string>
    <string name="txt_profile_image">profile image</string>
    <string name="txt_you_haven_t_added_any_vendor_yet">You haven\'t added any vendor yet</string>
    <string name="txt_delete_item">delete item</string>
    <string name="txt_address">Address</string>
    <string name="txt_digitize_bills_image">digitize bills image</string>
    <string name="txt_generate_invoice_image">Generate Invoice image</string>
    <string name="txt_search_easily_image">Search Easily Image</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_log_out">Log out</string>
    <string name="txt_mark_paid">Mark Paid</string>
    <string name="txt_delete_bill">Delete Bill</string>
    <string name="txt_save_bill">Save Bill</string>
    <string name="txt_discard_bill">Discard Invoice</string>
    <string name="text_please_provide_the_below_details">Please provide the below details</string>
    <string name="txt_profile">Profile</string>
    <string name="freshchat_file_provider_authority">com.fabuleux.wuntu.billstore.provider</string>
    <string name="share_using">Share</string>
    <string name="invite_link">You have been invited to use Bill Store. I love using Bill Store, it\'s simple and incredible. You should try it here:<a>https://bit.ly/2qRLNJ4</a> </string>
    <string name="txt_select_language">Select Language</string>
    <string name="txt_next">Next</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_add_products">Add Products</string>
    <string name="txt_view_added">View added</string>
    <string name="txt_search_product">Search Product</string>
    <string name="txt_products">Products</string>
    <string name="txt_product_name">Product Name</string>
    <string name="txt_unit_amount">Unit Amount</string>
    <string name="txt_description">Description</string>
    <string name="txt_add_product">Add Product</string>
    <string name="txt_unit_price">Unit Price</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_change_language">Change Language</string>
    <string name="txt_faq">FAQ</string>
    <string name="txt_chat_with_us">Chat with us</string>
    <string name="txt_invite">Invite</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_details">Details</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_app_settings">Settings</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="search_contact">Search Contact</string>
    <string name="due_date">Due Date</string>
    <string name="txt_share_bill">Share Invoice</string>
    <string name="please_add_contact">Please add a contact first</string>
    <string name="no_invoice">No Invoice</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="shop_company_mobile_number">Shop/Company Mobile Number</string>
    <string name="invoices">Invoices</string>
    <string-array name="questions">
        <item>How to generate invoice?</item>
        <item>How to add customers?</item>
        <item>How to add products?</item>
        <item>How to edit/delete product?</item>
        <item>How to change language?</item>
        <item>How to update personal details?</item>
        <item>What is Add Bill?</item>
    </string-array>
    <string-array name="answers">
        <item>Select generate invoice from bottom menu and select a contact. Select items to add in invoice by tapping on plus button in item details. Add Taxes, Shipping charges or any discount by tapping on edit in billing details and then preview the bill. Just send the bill. Now you can track that bill sent on Invoices screen.</item>
        <item>Select Settings from bottom menu and select Contacts. Tap the plus button in the bottom right corner and add contact with contact name,address, and mobile number.</item>
        <item>Select Settings from bottom menu and select Products. Tap the plus button in the bottom right corner and add product with product name,unit amount and description.</item>
        <item>Select Settings from bottom menu and select Products. Tap on the product and select edit or delete in the menu opened.</item>
        <item>Select Settings from bottom menu and select Change Language. Select the language and tap done</item>
        <item>Select Settings from bottom menu and select Profile. Edit the fields and tap on update.</item>
        <item>Suppose you got a printed bill and you want to digitize it so add that bill with full information like bill amount,bill date, bill paid or due with picture of bill. Now you can access your bill in Bill Store under Vendors on Home screen.</item>
    </string-array>
    <string name="txt_please_provide_the_below_details">Please provide below details</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mark_paid">Mark Paid</string>
    <string name="paid_by_cash">Paid by cash</string>
    <string name="paid_by_debit_credit_card">Paid by debit/credit card</string>
    <string name="others">Others</string>
    <string name="please_specify">Please specify</string>
</resources>