<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/txt_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/photo"/>

    </FrameLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/txt_app_icon"
                app:srcCompat="@drawable/login_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:visibility="gone"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_enter_phone_number"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:labelFor="@id/phone_number_edittext"/>

            <EditText
                android:id="@+id/phone_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/edt_rounded_corner"/>

            <ImageView
                android:visibility="gone"
                android:id="@+id/btn_signIn"
                android:contentDescription="@string/txt_sign_in"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_right_arrow"/>

        </LinearLayout>


        <TextView
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:text="Login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"/>

    </LinearLayout>
</RelativeLayout>