<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/txt_add_products"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="20dp"
            android:paddingRight="30dp"
            style="@style/standard_title_text_style"
            fontPath="fonts/OpenSans-Regular.ttf"
            tools:ignore="MissingPrefix"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_searchProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:background="@android:color/white"
            android:hint="@string/txt_search_product"
            android:singleLine="true"
            android:textSize="15sp"/>

    </LinearLayout>


    <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
        android:id="@+id/fast_scroller_recycler"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_viewAdded"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_view_added"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/text_save"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>