<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context="com.fabuleux.wuntu.billstore.Activity.ProductsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bg_header">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/txt_products"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            style="@style/standard_title_text_style"
            fontPath="fonts/OpenSans-Regular.ttf"
            tools:ignore="MissingPrefix"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_searchProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:background="@android:color/white"
            android:hint="@string/txt_search_product"
            android:singleLine="true"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyProductLayout"
        android:layout_below="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            app:srcCompat="@drawable/ic_not_found"
            android:layout_width="200dp"
            android:contentDescription="@string/txt_content_not_found"
            android:layout_height="200dp"
            android:padding="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/txt_you_haven_t_added_any_customer_yet"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:layout_below="@id/searchBar"
        android:id="@+id/productsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addProduct"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:src="@android:drawable/ic_input_add"
        android:scaleType="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

</RelativeLayout>
