<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/background_grey"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/txt_preview"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="20dp"
                style="@style/standard_title_text_style"
                fontPath="fonts/OpenSans-Regular.ttf"
                tools:ignore="MissingPrefix"/>

            <ImageView
                android:id="@+id/menu_dots_bill_view"
                android:contentDescription="@string/txt_menu"
                android:layout_width="0dp"
                android:padding="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_menu"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wholeSellerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Roadcast Tech Solutions Pvt Ltd"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"/>

            <TextView
                android:id="@+id/wholeSellerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="AM - 197 Shaheed Udham Singh Marg, Shalimar Bagh, Delhi"
                android:gravity="center"/>

            <TextView
                android:id="@+id/wholeSellerGst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                tools:text="GST Number - 1234567890"
                android:gravity="center"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_bill_date"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/wholeSellerBillDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="20 January 2018"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bill_amount"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/wholeSellerBillAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1000"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bill_status"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/billStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Due"
                        android:textSize="16sp"/>

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bill_documents"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/wholeSellerBillDocuments"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/addedBillFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:translationZ="5dp"
        android:visibility="visible"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_addButtonColorNormal="@color/colorPrimary"
        fab:fab_addButtonColorPressed="@color/colorPrimary"
        fab:fab_addButtonPlusIconColor="@color/white" />

</RelativeLayout>
